Fixed font size in order to make them small but readable

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -40,7 +40,7 @@
 }
 
 .features__paragraph {
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .features__heading,
