--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -28,6 +28,10 @@
   color: $title-color;
 }
 
+.masthead__title {
+  font-size: 24px;
+}
+
 .number,
 .small__heading,
 .header__article--skills {
@@ -65,7 +69,7 @@
   display: flex;
   flex-direction: row;
   color: $bg-color;
-  font-size: 10px;
+  font-size: 12px;
   background-color: $title-color;
   padding-left: 12.8px;
   padding-right: 12.8px;
@@ -178,6 +182,10 @@
   .header {
     padding-left: 21px;
     padding-right: 21px;
+  }
+
+  .masthead__title {
+    font-size: 28px;
   }
 
   .header__article--title {
