--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -29,7 +29,10 @@
   padding-top: 0;
 }
 
-.projects__description,
+.projects__description {
+  font-size: 12px;
+}
+
 .skills__list {
   font-size: 10px;
 }
@@ -52,14 +55,14 @@
 }
 
 .projects__list {
-  margin-top: calc(10px / 2);
-  margin-bottom: calc(10px / 2);
+  margin-top: 10px;
+  margin-bottom: 10px;
   justify-content: flex-end;
 }
 
 .projects__list svg {
-  margin-left: calc(8.5px/2);
-  margin-right: calc(8.5px/2);
+  margin-left: calc(8.5px / 2);
+  margin-right: calc(8.5px / 2);
 }
 
 .project__link svg {
@@ -74,7 +77,7 @@
 
 .more__projects a {
   @include flex-row;
-  font-size: 10px;
+  font-size: 12px;
   color: $primary-color;
 }
 
@@ -146,11 +149,6 @@ picture {
   .projects__image {
     margin-top: 40px;
     margin-bottom: 40px;
-  }
-
-  .projects__list {
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
 
   .projects__list svg {
