--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -125,6 +125,9 @@ section {
 .social__media--link {
   color: #fff; }
 
+.masthead__title {
+  font-size: 24px; }
+
 .number,
 .small__heading,
 .header__article--skills {
@@ -156,7 +159,7 @@ section {
   display: flex;
   flex-direction: row;
   color: #252839;
-  font-size: 10px;
+  font-size: 12px;
   background-color: #fff;
   padding-left: 12.8px;
   padding-right: 12.8px;
@@ -253,6 +256,8 @@ section {
   .header {
     padding-left: 21px;
     padding-right: 21px; }
+  .masthead__title {
+    font-size: 28px; }
   .header__article--title {
     font-size: 40px; }
   .small__heading {
@@ -315,6 +320,10 @@ section {
   flex-direction: column;
   align-items: center;
   font-size: 10px; }
+
+.navigation__link div {
+  display: flex;
+  flex-wrap: nowrap; }
 
 .navigation__link:hover {
   color: #f1b631; }
@@ -515,7 +524,7 @@ section {
   margin-bottom: calc(40px / 2); }
 
 .features__paragraph {
-  font-size: 10px; }
+  font-size: 12px; }
 
 .features__heading,
 .features__paragraph {
@@ -596,7 +605,9 @@ section {
   position: relative;
   padding-top: 0; }
 
-.projects__description,
+.projects__description {
+  font-size: 12px; }
+
 .skills__list {
   font-size: 10px; }
 
@@ -615,13 +626,13 @@ section {
   flex-direction: row; }
 
 .projects__list {
-  margin-top: calc(10px / 2);
-  margin-bottom: calc(10px / 2);
+  margin-top: 10px;
+  margin-bottom: 10px;
   justify-content: flex-end; }
 
 .projects__list svg {
-  margin-left: calc(8.5px/2);
-  margin-right: calc(8.5px/2); }
+  margin-left: calc(8.5px / 2);
+  margin-right: calc(8.5px / 2); }
 
 .project__link svg {
   width: 20px;
@@ -635,7 +646,7 @@ section {
   display: flex;
   flex-direction: row;
   align-items: center;
-  font-size: 10px;
+  font-size: 12px;
   color: #f1b631; }
 
 .more__projects svg {
@@ -695,9 +706,6 @@ picture {
   .projects__image {
     margin-top: 40px;
     margin-bottom: 40px; }
-  .projects__list {
-    margin-top: 10px;
-    margin-bottom: 10px; }
   .projects__list svg {
     margin-left: 8.5px;
     margin-right: 8.5px; }
